--- a/Web/Views/Home/Popular.cshtml
+++ b/Web/Views/Home/Popular.cshtml
@@ -7,31 +7,31 @@
 
 @foreach (var item in Model.Movies)
 {
-<div class="movie-card">
-    <div class="movie-header" style="background: url(@Url.Content("https://image.tmdb.org/t/p/w500" + item.PosterPath))">
-    </div><!--movie-header-->
-    <div class="movie-content">
-        <div class="movie-content-header">
-            <a href="@Url.Action("Details", new { id = item.Id })">
-                <h3 class="movie-title">@item.Title</h3>
-            </a>
-        </div>
-        <div class="movie-info">
-            <div class="info-section">
-                <label>Release date</label>
-                <span>@item.ReleaseDate</span>
-            </div><!--date,time-->
-            <div class="info-section">
-                <label>Vote average</label>
-                <span>@item.VoteAverage</span>
-            </div><!--screen-->
-            <div class="info-section">
-                <label>Votes</label>
-                <span>@item.VoteCount</span>
-            </div><!--row-->
-        </div>
-    </div><!--movie-content-->
-</div><!--movie-card-->}
+    <div class="movie-card">
+        <div class="movie-header" style="background: url(@Url.Content("https://image.tmdb.org/t/p/w500" + item.PosterPath))">
+        </div><!--movie-header-->
+        <div class="movie-content">
+            <div class="movie-content-header">
+                <a href="@Url.Action("Details", new { id = item.Id })">
+                    <h3 class="movie-title">@item.Title</h3>
+                </a>
+            </div>
+            <div class="movie-info">
+                <div class="info-section">
+                    <label>Release date</label>
+                    <span>@item.ReleaseDate</span>
+                </div><!--date,time-->
+                <div class="info-section">
+                    <label>Vote average</label>
+                    <span>@item.VoteAverage</span>
+                </div><!--screen-->
+                <div class="info-section">
+                    <label>Votes</label>
+                    <span>@item.VoteCount</span>
+                </div><!--row-->
+            </div>
+        </div><!--movie-content-->
+    </div><!--movie-card-->}
 
 
 <div class="container">
@@ -40,29 +40,30 @@
 
             @if (Model.Page > 6)
             {
-<li>
-    <a class="page-link" href="~/Home/Index?page=1">1</a>
-</li>
+                <li>
+                    <a class="page-link" href="~/Home/Index?page=1">1</a>
+                </li>
                 <li>
                     <a class="page-link" href="">...</a>
                 </li>
-}
+            }
 
-            @for (var i = Model.Page < 5 ? 1 : Model.Page - 5; i < (Model.Page + 5 > Model.TotalPages ? Model.TotalPages : Model.Page + 5); i++)
+            @for (var i = Model.Page < 5 ? 1 : Model.Page - 5; i <= (Model.Page + 5 > Model.TotalPages ? Model.TotalPages : Model.Page + 5); i++)
             {
-<li class="page-item @(i == Model.Page ? "active" : "")">
-    <a class="page-link" href="~/Home/Index?page=@i">@i.ToString()</a>
-</li>
-   }
+                <li class="page-item @(i == Model.Page ? "active" : "")">
+                    <a class="page-link" href="~/Home/Index?page=@i">@i.ToString()</a>
+                </li>
+            }
 
             @if (Model.Page < Model.TotalPages - 5)
             {
-<li>
-    <a class="page-link" href="">...</a>
-</li>
+                <li>
+                    <a class="page-link" href="">...</a>
+                </li>
                 <li>
                     <a class="page-link" href="~/Home/Index?page=@Model.TotalPages">@Model.TotalPages</a>
-                </li>}
+                </li>
+}
         </ul>
     </div>
 
