--- a/Web/Views/Home/Details.cshtml
+++ b/Web/Views/Home/Details.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="movie-card">
+<div class="movie-card one">
     <div class="movie-header" style="background: url(@Url.Content("https://image.tmdb.org/t/p/w500" + Model.PosterPath))">
     </div><!--movie-header-->
     <div class="movie-content">
