--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -1,4 +1,25 @@
-﻿
+﻿body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
+
 * {
     -webkit-transition: 300ms;
     transition: 300ms;
@@ -32,7 +53,6 @@ a {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     max-width: 100%;
-    margin-top: 10vh;
     margin-left: auto;
     margin-right: auto;
     -webkit-box-pack: center;
@@ -49,6 +69,10 @@ a {
     border-radius: 10px;
     display: inline-block;
 }
+
+    .movie-card.one {
+        max-width: 600px;
+    }
 
 .movie-header {
     padding: 0;
@@ -184,5 +208,3 @@ a {
         margin: 0;
     }
 }
-
-
